--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -167,20 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "32037218",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from qiskit.circuit.library import IQP\n",
+    "from qiskit.circuit.library import iqp\n",
     "from qiskit.quantum_info import random_hermitian, SparsePauliOp\n",
     "\n",
     "n_qubits = 50\n",
     "\n",
     "# Generate a random circuit\n",
     "mat = np.real(random_hermitian(n_qubits, seed=1234))\n",
-    "circuit = IQP(mat)\n",
+    "circuit = iqp(mat)\n",
     "circuit.measure_all()\n",
     "\n",
     "# Define observables as a string\n",
