Apply suggestions from code review

--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -194,7 +194,7 @@
     "  </summary>\n",
     "\n",
     "- `initial_layout` (Layout | Dict | List) - Initial position of virtual qubits on physical qubits. If this layout makes the circuit compatible with the `coupling_map` constraints, it will be used. The final layout is not guaranteed to be the same, as the transpiler might permute qubits through swaps or other means. For full details, see the [Initial layout section.](common-parameters#initial-layout)\n",
-    "- `layout_method` (str) - Name of layout selection pass (`default`, `dense`, `sabre` and `trivial`). This can also be the external plugin name to use for the layout stage. You can see a list of installed plugins by running `list_stage_plugins()` with `layout` for the `stage_name` argument. The default value is `sabre`.\n",
+    "- `layout_method` (str) - Name of layout selection pass (`default`, `dense`, `sabre`, and `trivial`). This can also be the external plugin name to use for the layout stage. You can see a list of installed plugins by running `list_stage_plugins()` with `layout` for the `stage_name` argument. The default value is `sabre`.\n",
     "</details>\n",
     "\n",
     "<details>\n",
