Integrate review comments

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -31,7 +31,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 
 **27 March 2025**
 
-- **Cost limits for Standard Plan** - Standard Plan users with sufficient access can now view and edit [maximum cost limits](/guides/upgrade-from-open#set-the-maximum-cost-limit) for their instances.
+- **Cost limits for Standard Plan** - Standard Plan users with sufficient access can now view and edit [maximum cost limits](/guides/manage-cost#cost-limit) for their instances.
 
 - **Job management updates** - Now only administrators can delete workloads created by other users in an account, and collaborators will only be able to delete their own workloads.
 
