--- a/docs/migration-guides/qiskit-2.0.mdx
+++ b/docs/migration-guides/qiskit-2.0.mdx
@@ -1,17 +1,17 @@
 ---
-title: Qiskit 2.0 migration guide
-description: How to update your project so that it works with Qiskit 2.0.
+title: Qiskit v2.0 migration guide
+description: How to update your project so that it works with Qiskit v2.0.
 ---
 
 {/* cspell:ignore nbqa, ipynb, tqdm */}
 
-# Qiskit 2.0 migration guide
+# Qiskit v2.0 migration guide
 
-Qiskit 2.0 is the next step within the Qiskit SDK's newly stabilized lifecycle. 
+Qiskit v2.0 is the next step within the Qiskit SDK's newly stabilized lifecycle. 
 This major version does break compatibility with previous versions of Qiskit, but, 
 compared to the v1.0 release, doesn't involve any changes in the packaging structure. 
 
-This guide describes migration paths for the most important feature changes in Qiskit 2.0, organized by module.
+This guide describes migration paths for the most important feature changes in Qiskit v2.0, organized by module.
 Use the table of contents on the right side to navigate to the module you are interested in.
 
 Read more about the benefits of Qiskit v2.0 on the [IBM&reg; blog](https://www.ibm.com/quantum/blog/qiskit-1-0-release-summary).
@@ -22,18 +22,18 @@ Read more about the benefits of Qiskit v2.0 on the [IBM&reg; blog](https://www.i
 <span id="c_if"></span>
 ### Removal of legacy `c_if` conditions
 
-Classical conditions in Qiskit have been preferentially represented by the instruction [`IfElseOp`](/api/qiskit/qiskit.circuit.IfElseOp) since before Qiskit 1.0.
+Classical conditions in Qiskit have been preferentially represented by the instruction [`IfElseOp`](/api/qiskit/qiskit.circuit.IfElseOp) since before Qiskit v1.0.
 These operations are typically added to a [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit) by using the [`if_test`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.if_test) method as a context manager.
 
 This also means that the [`Instruction`](/api/qiskit/qiskit.circuit.Instruction) no longer has a `condition` attribute, and that you cannot chain `c_if` calls on the output of a [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit) gate-creating method call.
 
 The only instructions that might have a condition now are [`IfElseOp`](/api/qiskit/qiskit.circuit.IfElseOp) and [`WhileLoopOp`](/api/qiskit/qiskit.circuit.WhileLoopOp).
 The most correct way to test for a condition is to use an `isinstance` check to validate that you have the correct class.
-If you want to support the legacy `Instruction.condition` attribute during your library's transition to Qiskit 2.0 and above, you can use `getattr(operation, "condition", None)`, which will typically cause `Instruction` instances to behave as they did in Qiskit 1.x and before.
+If you want to support the legacy `Instruction.condition` attribute during your library's transition to Qiskit v2.0 and above, you can use `getattr(operation, "condition", None)`, which will typically cause `Instruction` instances to behave as they did in Qiskit v1.x and before.
 
 The original, legacy method of supporting simple register-equality conditions in Qiskit was to use the `c_if` method on individual instructions or instruction sets.
 This was strictly less featureful than the full control-flow form, and was never well-supported on hardware.
-This legacy method has been removed in Qiskit 2.0; you should use the [`if_test`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.if_test) method with a proper condition.
+This legacy method has been removed in Qiskit v2.0; you should use the [`if_test`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.if_test) method with a proper condition.
 You can continue to use the 2-tuple form of `(register, integer)` to represent a register equality, or you can use the more expressive [classical computation subsystem](/api/qiskit/qiskit.circuit_classical) to represent more complex conditions.
 
 For example, you might have written:
@@ -95,11 +95,11 @@ with else_:
 ### Removal of `Instruction.duration` and `Instruction.unit`
 
 Circuit [`Instruction`](/api/qiskit/qiskit.circuit.Instruction) objects used to have attributes called `duration` and `unit`.
-These no longer exist in Qiskit 2.0.
+These no longer exist in Qiskit v2.0.
 This is because the field generally only duplicated information that was a fixed property of hardware, and was stored explicitly in the [`Target`](/api/qiskit/qiskit.transpiler.Target).
 Storing the information separately for each individual instruction significantly increased the memory demands of Qiskit and slowed down even circuit operations that did not directly need to touch the information.
 
-The [`Delay`](/api/qiskit/qiskit.circuit#delay) instruction still contains these fields, as does the new-in-2.0 [`BoxOp`](/api/qiskit/qiskit.circuit#box), because these instructions have a _variable_ delay.
+The [`Delay`](/api/qiskit/qiskit.circuit#delay) instruction still contains these fields, as does the new-in-v2.0 [`BoxOp`](/api/qiskit/qiskit.circuit#box), because these instructions have a _variable_ delay.
 
 You can retrieve the hardware-specified duration of a particular hardware-supported [`Instruction`](/api/qiskit/qiskit.circuit.Instruction) by querying the [`Target`](/api/qiskit/qiskit.transpiler.Target).
 To do this, index the [`Target`](/api/qiskit/qiskit.transpiler.Target) first with the operation's name, and then the indices of the hardware qubits as a tuple.
@@ -118,7 +118,7 @@ duration = getattr(target["cx"][2, 4], "duration", None)
 ```
 
 In general, as classical control-flow becomes more common within circuit executions, the "duration" of a circuit will become less and less well defined.
-While Qiskit 2.x still includes the [`QuantumCircuit.duration`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.duration) attribute, we encourage you to move away from it, as it will likely be removed in the future; the assumptions under which it is valid will be violated more and more frequently.
+While Qiskit v2.x still includes the [`QuantumCircuit.duration`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.duration) attribute, we encourage you to move away from it, as it will likely be removed in the future; the assumptions under which it is valid will be violated more and more frequently.
 Instead, you can use the new [`QuantumCircuit.estimate_duration`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.estimate_duration) method, which is safer and clearer about the necessary assumptions.
 
 
@@ -251,10 +251,10 @@ This includes the related items:
 - the `calibration` field of [`InstructionProperties`](/api/qiskit/qiskit.transpiler.InstructionProperties).
 
 This happened because IBM Quantum devices ceased to offer pulse-level access, and the Qiskit team no longer had resources to maintain the little used package.
-You can continue to use the `qiskit.pulse` module while using the 1.x series of Qiskit, which has bugfix support until September 2024 and security support until March 2025, but the module is removed from the 2.x series.
+You can continue to use the `qiskit.pulse` module while using the v1.x series of Qiskit, which has bugfix support until September 2024 and security support until March 2025, but the module is removed from the v2.x series.
 
 Most uses of `qiskit.pulse` can be replaced with direct access to fractional gates on IBM Quantum Heron QPUs (and later generations, if applicable).
 You can read more in [the migration guide for converted pulse usage to fractional gates](/migration-guides/pulse-migration).
 
-You can no longer load QPY files that contain `ScheduleBlock` objects in Qiskit 2.0 because of the removal of Qiskit Pulse.
-You can continue to load these files in the Qiskit 1.x series.
+You can no longer load QPY files that contain `ScheduleBlock` objects in Qiskit v2.0 because of the removal of Qiskit Pulse.
+You can continue to load these files in the Qiskit v1.x series.
