--- a/docs/migration-guides/qiskit-2.0.mdx
+++ b/docs/migration-guides/qiskit-2.0.mdx
@@ -7,9 +7,9 @@ description: How to update your project so that it works with Qiskit v2.0.
 
 # Qiskit v2.0 migration guide
 
-Qiskit v2.0 is the next step within the Qiskit SDK's newly stabilized lifecycle. 
+Qiskit v2.0 is the next step within the Qiskit SDK's newly stabilized life cycle. 
 This major version does break compatibility with previous versions of Qiskit, but, 
-compared to the v1.0 release, doesn't involve any changes in the packaging structure. 
+in contrast to the v1.0 release, doesn't involve any changes in the packaging structure. 
 
 This guide describes migration paths for the most important feature changes in Qiskit v2.0, organized by module.
 Use the table of contents on the right side to navigate to the module you are interested in.
@@ -29,7 +29,7 @@ This also means that the [`Instruction`](/api/qiskit/qiskit.circuit.Instruction)
 
 The only instructions that might have a condition now are [`IfElseOp`](/api/qiskit/qiskit.circuit.IfElseOp) and [`WhileLoopOp`](/api/qiskit/qiskit.circuit.WhileLoopOp).
 The most correct way to test for a condition is to use an `isinstance` check to validate that you have the correct class.
-If you want to support the legacy `Instruction.condition` attribute during your library's transition to Qiskit v2.0 and above, you can use `getattr(operation, "condition", None)`, which will typically cause `Instruction` instances to behave as they did in Qiskit v1.x and before.
+If you want to support the legacy `Instruction.condition` attribute during your library's transition to Qiskit v2.0 and later, you can use `getattr(operation, "condition", None)`, which will typically cause `Instruction` instances to behave as they did in Qiskit v1.x and earlier.
 
 The original, legacy method of supporting simple register-equality conditions in Qiskit was to use the `c_if` method on individual instructions or instruction sets.
 This was strictly less featureful than the full control-flow form, and was never well-supported on hardware.
@@ -94,7 +94,7 @@ with else_:
 <span id="instruction_durations"></span>
 ### Removal of `Instruction.duration` and `Instruction.unit`
 
-Circuit [`Instruction`](/api/qiskit/qiskit.circuit.Instruction) objects used to have attributes called `duration` and `unit`.
+Circuit [`Instruction`](/api/qiskit/qiskit.circuit.Instruction) objects previously had attributes called `duration` and `unit`.
 These no longer exist in Qiskit v2.0.
 This is because the field generally only duplicated information that was a fixed property of hardware, and was stored explicitly in the [`Target`](/api/qiskit/qiskit.transpiler.Target).
 Storing the information separately for each individual instruction significantly increased the memory demands of Qiskit and slowed down even circuit operations that did not directly need to touch the information.
@@ -118,7 +118,7 @@ duration = getattr(target["cx"][2, 4], "duration", None)
 ```
 
 In general, as classical control-flow becomes more common within circuit executions, the "duration" of a circuit will become less and less well defined.
-While Qiskit v2.x still includes the [`QuantumCircuit.duration`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.duration) attribute, we encourage you to move away from it, as it will likely be removed in the future; the assumptions under which it is valid will be violated more and more frequently.
+While Qiskit v2.x still includes the [`QuantumCircuit.duration`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.duration) attribute, it is recommended to move away from it, as it will likely be removed in the future; the assumptions under which it is valid will be violated more and more frequently.
 Instead, you can use the new [`QuantumCircuit.estimate_duration`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.estimate_duration) method, which is safer and clearer about the necessary assumptions.
 
 
@@ -130,7 +130,7 @@ Instead, you can use the new [`QuantumCircuit.estimate_duration`](/api/qiskit/qi
 
 Qiskit v2.0.0 includes a series of updates to the preset pass manager interface (that is, the
 [`generate_preset_pass_manager`](/api/qiskit/qiskit.transpiler.generate_preset_pass_manager) and 
-([`transpile`](/api/qiskit/qiskit.compiler#transpile) functions)) that affect the 
+[`transpile`](/api/qiskit/qiskit.compiler#transpile) functions) that affect the 
 handling of loose constraint inputs, such as `coupling_map` or `basis_gates`. The number of 
 transpilation use cases where loose constraints are accepted has been reduced in favor of the 
 `target` and `backend` inputs (where `backend` is a [`BackendV2`](/api/qiskit/qiskit.providers.BackendV2) that 
@@ -226,7 +226,7 @@ of the migration tips below apply to both `transpile` and `generate_preset_pass_
     ```
 
 5. The input combination where a custom `coupling_map` is provided with either a `backend` or `basis_gates`
-  that contain gates with 3 or more qubits is no longer allowed. The coupling map
+  that contain gates with three or more qubits is no longer allowed. The coupling map
   does not provide the necessary connectivity details to be able to determine the  action of the gate.
   In these cases, the recommended migration path is the creation of a custom target from scratch.
 
@@ -250,8 +250,8 @@ This includes the related items:
 - the `inst_map` argument of [`generate_preset_pass_manager`](/api/qiskit/qiskit.transpiler.generate_preset_pass_manager), [`transpile`](/api/qiskit/qiskit.compiler.transpile), and [`Target.from_configuration`](/api/qiskit/qiskit.transpiler.Target#qiskit.transpiler.Target.from_configuration).
 - the `calibration` field of [`InstructionProperties`](/api/qiskit/qiskit.transpiler.InstructionProperties).
 
-This happened because IBM Quantum devices ceased to offer pulse-level access, and the Qiskit team no longer had resources to maintain the little used package.
-You can continue to use the `qiskit.pulse` module while using the v1.x series of Qiskit, which has bugfix support until September 2024 and security support until March 2025, but the module is removed from the v2.x series.
+This happened because IBM Quantum&reg; QPUs ceased to offer pulse-level access, and the Qiskit team no longer had resources to maintain the little-used package.
+You can continue to use the `qiskit.pulse` module while using the v1.x series of Qiskit, which has bug-fix support until September 2024 and security support until March 2025, but the module is removed from the v2.x series.
 
 Most uses of `qiskit.pulse` can be replaced with direct access to fractional gates on IBM Quantum Heron QPUs (and later generations, if applicable).
 You can read more in [the migration guide for converted pulse usage to fractional gates](/migration-guides/pulse-migration).
