--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e7351d6b",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "856fe992",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "48821756",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
      "output_type": "stream",
      "text": [
       "The estimated QPU time for this PUB is: \n",
-      "{'time_estimation_sec': 504000}\n"
+      "{'time_estimation_sec': 12600}\n"
      ]
     }
    ],
@@ -345,10 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fda5f739",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of the submitted job had 1 PUB\n",
+      "The expectation values measured from this PUB are: \n",
+      "[1.00209222 0.98763303]\n",
+      "The error-bar values are: \n",
+      "[0.00410043 0.01971415]\n",
+      "And the associated metadata contains the original observables, making the results easier to interpret: \n",
+      "{'gate_fidelities': {'CNOT': 0.991932645993022, 'ID1Q': 0.9865222269129506}, 'total_shots': 445200, 'mitigation_shots': 180000, 'transpiled_circs': [{'circuit': 'OPENQASM 3.0;\\ninclude \"stdgates.inc\";\\nbit[16] c0;\\nqubit[16] q1;\\ncx q1[7], q1[6];\\ncx q1[5], q1[4];\\nbarrier q1[7], q1[6], q1[5], q1[4];\\nbarrier q1[4], q1[5], q1[6], q1[7], q1[15];\\ncx q1[6], q1[5];\\ncx q1[4], q1[15];\\nbarrier q1[6], q1[5], q1[4], q1[15];\\nbarrier q1[4], q1[5], q1[6], q1[7], q1[15];\\nbarrier q1[4], q1[5], q1[6], q1[7], q1[15];\\nc0[4] = measure q1[4];\\nc0[5] = measure q1[5];\\nc0[6] = measure q1[6];\\nc0[7] = measure q1[7];\\nc0[15] = measure q1[15];\\n', 'qubit_map': [[0, 7], [1, 6], [2, 5], [3, 4], [4, 15]], 'num_measurement_bases': 2}], 'noisy_results': DataBin(evs=np.ndarray(<shape=(2,), dtype=float64>), stds=np.ndarray(<shape=(2,), dtype=float64>), shape=(2,))}\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"The result of the submitted job had {len(result)} PUB\")\n",
     "print(\n",
@@ -372,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d95a3f30",
    "metadata": {},
    "outputs": [
@@ -380,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PrimitiveResult([PubResult(data=DataBin(evs=np.ndarray(<shape=(2,), dtype=float64>), stds=np.ndarray(<shape=(2,), dtype=float64>), shape=(2,)), metadata={'gate_fidelities': {'CNOT': 0.12649096598962462, 'ID1Q': 0.3271316829467972}, 'total_shots': 445200, 'mitigation_shots': 180000, 'transpiled_circs': [{'circuit': 'OPENQASM 3.0;\\ninclude \"stdgates.inc\";\\nbit[119] c0;\\nqubit[119] q1;\\ncx q1[99], q1[100];\\ncx q1[110], q1[118];\\nbarrier q1[99], q1[100], q1[110], q1[118];\\nbarrier q1[99], q1[100], q1[110], q1[117], q1[118];\\ncx q1[100], q1[110];\\ncx q1[118], q1[117];\\nbarrier q1[100], q1[110], q1[118], q1[117];\\nbarrier q1[99], q1[100], q1[110], q1[117], q1[118];\\nbarrier q1[99], q1[100], q1[110], q1[117], q1[118];\\nc0[99] = measure q1[99];\\nc0[100] = measure q1[100];\\nc0[110] = measure q1[110];\\nc0[117] = measure q1[117];\\nc0[118] = measure q1[118];\\n', 'qubit_map': [[0, 99], [1, 100], [2, 110], [3, 118], [4, 117]], 'num_measurement_bases': 2}], 'noisy_results': DataBin(evs=np.ndarray(<shape=(2,), dtype=float64>), stds=np.ndarray(<shape=(2,), dtype=float64>), shape=(2,))})], metadata={})\n"
+      "PrimitiveResult([PubResult(data=DataBin(), metadata={'time_estimation_sec': 12600})], metadata={})\n"
      ]
     }
    ],
