--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -66,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "da02c7ca-803a-4426-8dd0-bbe062c0e9e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<RuntimeJobV2('cyvmdrzq5bwg0083s75g', 'sampler')>,\n",
-       " <RuntimeJobV2('cyvm51cy2gd000889ap0', 'sampler')>,\n",
-       " <RuntimeJobV2('cysv714jj6dg008e4vk0', 'estimator')>]"
+       "[<RuntimeJobV2('cznay3gqw630008tn290', 'sampler')>,\n",
+       " <RuntimeJobV2('cznay1rp3xeg008heh5g', 'sampler')>,\n",
+       " <RuntimeJobV2('cznaxzqtj3e0008k0910', 'sampler')>]"
       ]
      },
      "execution_count": 1,
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cyvmdrzq5bwg0083s75g\n"
+      "cznay3gqw630008tn290\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
     {
      "data": {
       "text/plain": [
-       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=4096, num_bits=127>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2025-02-20 15:14:47', stop='2025-02-20 15:15:00', size=4096>)])}, 'version': 2})"
+       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=100, num_bits=16>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([DoubleSliceSpan(<start='2025-03-31 15:04:50', stop='2025-03-31 15:04:51', size=100>)])}, 'version': 2})"
       ]
      },
      "execution_count": 3,
@@ -208,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=4096, num_bits=127>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2025-02-20 15:14:47', stop='2025-02-20 15:15:00', size=4096>)])}, 'version': 2})"
+       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=100, num_bits=16>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([DoubleSliceSpan(<start='2025-03-31 15:04:50', stop='2025-03-31 15:04:51', size=100>)])}, 'version': 2})"
       ]
      },
      "execution_count": 5,
