update links to point to qiskit v1.4

--- a/docs/migration-guides/qiskit-1.0-features.mdx
+++ b/docs/migration-guides/qiskit-1.0-features.mdx
@@ -856,7 +856,7 @@ with pulse.build() as only_pulse_scheds:
 
 We recommend writing a minimum pulse program with the builder and attaching it to
 `QuantumCircuit` through the
-[`QuantumCircuit.add_calibration`](/api/qiskit/qiskit.circuit.QuantumCircuit#add_calibration)
+[`QuantumCircuit.add_calibration`](/api/qiskit/1.4/qiskit.circuit.QuantumCircuit#add_calibration)
 method as a microcode of a gate instruction, rather than writing the entire
 program with the pulse model.
 
