--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95a715d2",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2fb4efc4",
    "metadata": {
     "tags": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d56e1440",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,9 @@
     "    },\n",
     "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_brisbane\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "time_estimate_result = job.result()"
    ]
   },
   {
@@ -186,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e7351d6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = qesem_function.run(\n",
+    "sample_job = qesem_function.run(\n",
     "    pubs=[(circ, [avg_magnetization, other_observable])],\n",
     "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_brisbane\"\n",
@@ -208,13 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "856fe992",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUEUED\n"
+     ]
+    }
+   ],
    "source": [
-    "print(job.status())\n",
-    "result = job.result()"
+    "print(sample_job.status())\n",
+    "result = sample_job.result()"
    ]
   },
   {
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "48821756",
    "metadata": {},
    "outputs": [
@@ -315,12 +325,14 @@
      "output_type": "stream",
      "text": [
       "The estimated QPU time for this PUB is: \n",
-      "{'time_estimation_sec': 3600}\n"
+      "{'time_estimation_sec': 12600}\n"
      ]
     }
    ],
    "source": [
-    "print(f\"The estimated QPU time for this PUB is: \\n{result[0].metadata}\")"
+    "print(\n",
+    "    f\"The estimated QPU time for this PUB is: \\n{time_estimate_result[0].metadata}\"\n",
+    ")"
    ]
   },
   {
@@ -333,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fda5f739",
    "metadata": {},
    "outputs": [
@@ -343,22 +355,11 @@
      "text": [
       "The result of the submitted job had 1 PUB\n",
       "The expectation values measured from this PUB are: \n",
-      "[0.98, 1.01]\n",
+      "[1.00209222 0.98763303]\n",
       "The error-bar values are: \n",
-      "[0.028, 0.015]\n",
+      "[0.00410043 0.01971415]\n",
       "And the associated metadata contains the original observables, making the results easier to interpret: \n",
-      "{\n",
-      "    'observables': [\n",
-      "        SparsePauliOp(\n",
-      "            ['IIIIZ', 'IIIZI', 'IIZII', 'IZIII', 'ZIIII'],\n",
-      "            coeffs=[0.2 + 0.0j, 0.2 + 0.0j, 0.2 + 0.0j, 0.2 + 0.0j, 0.2 + 0.0j]\n",
-      "        ),\n",
-      "        SparsePauliOp(\n",
-      "            ['IIIZZ', 'ZIXII'],\n",
-      "            coeffs=[1.0 + 0.0j, 0.5 + 0.0j]\n",
-      "        )\n",
-      "    ]\n",
-      "}\n"
+      "{'gate_fidelities': {'CNOT': 0.991932645993022, 'ID1Q': 0.9865222269129506}, 'total_shots': 445200, 'mitigation_shots': 180000, 'transpiled_circs': [{'circuit': 'OPENQASM 3.0;\\ninclude \"stdgates.inc\";\\nbit[16] c0;\\nqubit[16] q1;\\ncx q1[7], q1[6];\\ncx q1[5], q1[4];\\nbarrier q1[7], q1[6], q1[5], q1[4];\\nbarrier q1[4], q1[5], q1[6], q1[7], q1[15];\\ncx q1[6], q1[5];\\ncx q1[4], q1[15];\\nbarrier q1[6], q1[5], q1[4], q1[15];\\nbarrier q1[4], q1[5], q1[6], q1[7], q1[15];\\nbarrier q1[4], q1[5], q1[6], q1[7], q1[15];\\nc0[4] = measure q1[4];\\nc0[5] = measure q1[5];\\nc0[6] = measure q1[6];\\nc0[7] = measure q1[7];\\nc0[15] = measure q1[15];\\n', 'qubit_map': [[0, 7], [1, 6], [2, 5], [3, 4], [4, 15]], 'num_measurement_bases': 2}], 'noisy_results': DataBin(evs=np.ndarray(<shape=(2,), dtype=float64>), stds=np.ndarray(<shape=(2,), dtype=float64>), shape=(2,))}\n"
      ]
     }
    ],
@@ -385,10 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d95a3f30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PrimitiveResult([PubResult(data=DataBin(), metadata={'time_estimation_sec': 12600})], metadata={})\n"
+     ]
+    }
+   ],
    "source": [
     "print(job.result())"
    ]
