--- a/docs/migration-guides/qiskit-2.0.mdx
+++ b/docs/migration-guides/qiskit-2.0.mdx
@@ -34,7 +34,7 @@ If you want to support the legacy `Instruction.condition` attribute during your 
 The original, legacy method of supporting simple register-equality conditions in Qiskit was to use the `c_if` method on individual instructions or instruction sets.
 This was strictly less featureful than the full control-flow form, and was never well-supported on hardware.
 This legacy method has been removed in Qiskit v2.0; you should use the [`if_test`](/api/qiskit/qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit.if_test) method with a proper condition.
-You can continue to use the 2-tuple form of `(register, integer)` to represent a register equality, or you can use the more expressive [classical computation subsystem](/api/qiskit/qiskit.circuit_classical) to represent more complex conditions.
+You can continue to use the 2-tuple form of `(register, integer)` to represent a register equality, or you can use the more expressive [classical computation subsystem](/api/qiskit/circuit_classical) to represent more complex conditions.
 
 For example, you might have written:
 
@@ -99,7 +99,7 @@ These no longer exist in Qiskit v2.0.
 This is because the field generally only duplicated information that was a fixed property of hardware, and was stored explicitly in the [`Target`](/api/qiskit/qiskit.transpiler.Target).
 Storing the information separately for each individual instruction significantly increased the memory demands of Qiskit and slowed down even circuit operations that did not directly need to touch the information.
 
-The [`Delay`](/api/qiskit/qiskit.circuit#delay) instruction still contains these fields, as does the new-in-v2.0 [`BoxOp`](/api/qiskit/qiskit.circuit#box), because these instructions have a _variable_ delay.
+The [`Delay`](/api/qiskit/circuit#delay) instruction still contains these fields, as does the new-in-v2.0 [`BoxOp`](/api/qiskit/qiskit.circuit.QuantumCircuit#box), because these instructions have a _variable_ delay.
 
 You can retrieve the hardware-specified duration of a particular hardware-supported [`Instruction`](/api/qiskit/qiskit.circuit.Instruction) by querying the [`Target`](/api/qiskit/qiskit.transpiler.Target).
 To do this, index the [`Target`](/api/qiskit/qiskit.transpiler.Target) first with the operation's name, and then the indices of the hardware qubits as a tuple.
@@ -130,7 +130,7 @@ Instead, you can use the new [`QuantumCircuit.estimate_duration`](/api/qiskit/qi
 
 Qiskit v2.0.0 includes a series of updates to the preset pass manager interface (that is, the
 [`generate_preset_pass_manager`](/api/qiskit/qiskit.transpiler.generate_preset_pass_manager) and 
-[`transpile`](/api/qiskit/qiskit.compiler#transpile) functions) that affect the 
+[`transpile`](/api/qiskit/compiler#transpile) functions) that affect the 
 handling of loose constraint inputs, such as `coupling_map` or `basis_gates`. The number of 
 transpilation use cases where loose constraints are accepted has been reduced in favor of the 
 `target` and `backend` inputs (where `backend` is a [`BackendV2`](/api/qiskit/qiskit.providers.BackendV2) that 
@@ -240,14 +240,14 @@ of the migration tips below apply to both `transpile` and `generate_preset_pass_
 The module `qiskit.pulse` has been completely removed from Qiskit, without replacement.
 This includes the related items:
 
-- the [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit), [`DAGCircuit`](/api/qiskit/qiskit.dagcircuit.DAGCircuit) and [`DAGDependency`](/ap/qiskit/qiskit.dagcircuit.DAGDependency) property `calibrations`.
+- the [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit), [`DAGCircuit`](/api/qiskit/qiskit.dagcircuit.DAGCircuit) and [`DAGDependency`](/api/qiskit/qiskit.dagcircuit.DAGDependency) property `calibrations`.
 - the [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit) methods `has_calibration_for` and `add_calibration`.
 - the [`DAGCircuit`](/api/qiskit/qiskit.dagcircuit.DAGCircuit) method `has_calibration_for`.
 - the transpiler passes `PulseGates`, `RXCalibrationBuilder`, `RZXCalibrationBuilder`, `EchoRZXWeylDecomposition`, `ValidatePulseGates`.
 - the module `qiskit.scheduler` and all its contents.
 - the [`BackendV2`](/api/qiskit/qiskit.providers.BackendV2) methods `instruction_schedule_map`, `drive_channel`, `measure_channel`, `acquire_channel` and `control_channel`.
 - the [`Target`](/api/qiskit/qiskit.transpiler.Target) methods `has_calibration`, `get_calibration`, `instruction_schedule_map` and `update_from_instruction_schedule_map`.
-- the `inst_map` argument of [`generate_preset_pass_manager`](/api/qiskit/qiskit.transpiler.generate_preset_pass_manager), [`transpile`](/api/qiskit/qiskit.compiler.transpile), and [`Target.from_configuration`](/api/qiskit/qiskit.transpiler.Target#qiskit.transpiler.Target.from_configuration).
+- the `inst_map` argument of [`generate_preset_pass_manager`](/api/qiskit/qiskit.transpiler.generate_preset_pass_manager), [`transpile`](/api/qiskit/compiler#transpile), and [`Target.from_configuration`](/api/qiskit/qiskit.transpiler.Target#qiskit.transpiler.Target.from_configuration).
 - the `calibration` field of [`InstructionProperties`](/api/qiskit/qiskit.transpiler.InstructionProperties).
 
 This happened because IBM Quantum&reg; QPUs ceased to offer pulse-level access, and the Qiskit team no longer had resources to maintain the little-used package.
