--- a/docs/guides/quickstart-steps-org.mdx
+++ b/docs/guides/quickstart-steps-org.mdx
@@ -75,8 +75,8 @@ Follow these steps to set up an access group:
 Follow the steps in the appropriate topic, depending on the ID provider you chose to use:
 
 * [Use IBM Cloud&reg; as the ID provider for users that have IBM Cloud accounts](/guides/manage-cloud-users)
-* [Use IBM Cloud as the ID provider for users that do not have IBM Cloud accounts](/guides/manage-appid-cloud)
-* [Use an ID provider other than IBM Cloud for users that do not have IBM Cloud accounts](/guides/manage-appid-id-provider)
+* [Use IBM Cloud as the ID provider for users that do not have IBM Cloud accounts](/guides/manage-appid#id-cloud)
+* [Use an ID provider other than IBM Cloud for users that do not have IBM Cloud accounts](/guides/manage-appid#id-provider)
 
 ## Next steps
 
