--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -162,6 +162,35 @@ If you do not specify an instance, the code will select one in the following ord
 3. In all other cases, the code selects the first instance other than the Open Plan instance that has access to the quantum computer.
 </Admonition>
 
+## Add an instance
+
+1. To add an instance to your account, first ensure you have the correct account and region selected in the account switcher in the top header.
+   <span id="regions"></span>
+   <Admonition type="note" title="About regions">
+   The instance will be created in the selected region. This region determines these important characteristics:
+     * The region determines which QPUs are available.
+     * The jobs' classical computation, such as compilation, takes place in the region.
+     * The user's workflow data remains in the region.
+
+    The workflow data includes the input circuits, circuit parameters, and quantum computation results.  It does not include metadata, such as number of shots, size of circuits, or other job statistics.
+
+   To avoid exposure of the user's workflow data to a global Distributed Denial of Service protection layer, you can use [Virtual Private Endpoints](https://cloud.ibm.com/docs/overview?topic=overview-endpoints-support). `qiskit-ibm-runtime` supports this through the [private_endpoint parameter](/api/qiskit-ibm-runtime/qiskit-runtime-service).
+   </Admonition>
+
+1. From the dashboard Instances pane, click **View all**, or go to the [Instances](https://quantum.cloud.ibm.com/instances) page from the left-hand menu. 
+1. From the Instances page, click *Create instance&nbsp;+*. Enter a name and optionally add tags. If you have access to more than one resource group in IBM Cloud&reg;, you can choose to change the resource group this instance belongs to. See [Managing resource groups](https://cloud.ibm.com/docs/account?topic=account-rgs&interface=ui) and [Giving access to resources in resource groups](https://cloud.ibm.com/docs/account?topic=account-rgs_manage_access) for more information.
+1. Select the plan this instance is associated with (for example, Premium Plan), then enter the number of minutes to allocate to this instance. The unallocated time available to use appears under the allocation entry box.
+1. Click **Next**. A list of the QPUs the instance can access is shown. If you want the instance to have access to all the QPUs listed (and all QPUs added to this plan in the future), click **Next**. To customize which QPUs can be accessed with this instance, click the "Customize allocated compute resources" toggle. Select specific QPUs that this instance can access, then click **Next**.
+   <Admonition type="note">
+      If you customize the allocated compute resources, the available QPUs will never be automatically updated, regardless of any changes made to the parent plan.  However, you can manually add or remove QPUs later. If you do not customize them, you will always have access to any QPU the account has access on the plan. So if in the future there is a new system added to the plan, the instance automatically has access to it.
+    </Admonition>
+1. By default, an access group is created for this instance. Users added to this access group can use the time allocated to this instance. If you do not want an access group to be automatically created for this instance, click the "Create access group automatically" toggle. You can [create access groups](/guides/access-groups) later by using the IBM Cloud console.
+1. Click **Create instance**. You can now view the instance on the Instances page (if you have set up multiple plans on your account, each plan type has its own tab on the Instances table).
+
+## Edit an instance and its allocation
+
+Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To edit the instance, click the three-dots menu at the end the instance's row, and select Edit details. In the modal that opens, you can edit the name of the instance, the number of minutes allocated to the instance, and which compute resources the instance can access.
+
 <LegacyContent>
 ## Leave an instance
 
@@ -169,6 +198,11 @@ To leave an instance, visit the instance list on your [Account page.](https://qu
 
 ![Screenshot of the Account page.](/images/guides/leaving1.avif "Leave instance")
 </LegacyContent>
+
+## Delete an instance
+
+Find the instance on the [Instances](https://quantum.cloud.ibm.com/instances) page. To delete the instance, click the three-dots menu at the end the instance's row, and select Delete.
+
 
 ## Next steps
 
