fix link to old page

--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -143,7 +143,7 @@ Additionally, you can determine cost per instance or per job at any time.
 
 ### View usage
 
-To view the instance's usage, follow the instructions in the [analytics](/administration/analytics) guide.
+View the instance's usage on the [Analytics](https://quantum.cloud.ibm.com/analytics) page.
 
 {/* ### View instance cost
 
