--- a/docs/guides/allocation-limits.mdx
+++ b/docs/guides/allocation-limits.mdx
@@ -1,8 +1,7 @@
 ---
 title: Set instance allocation limits
-description: Set allocation limits on an instance
+description: Set, view, and change how much time an instance is allowed to use.
 platform: cloud
-
 ---
 # Set instance allocation limits
 
@@ -14,7 +13,7 @@ Optionally you can set this time allocation as a limit for the instance.
 
 Setting allocations and limits is optional.  If none are set for your instances, the [fair-share scheduler](/fair-share-queue) prioritizes workloads from instances with lower usage, and your account is still limited to its overall time allotment.
 
-You can view and change allocated time on the [instances page.](https://quantum.cloud.ibm.com/instances)
+You can set the allocation when creating the instance.  Alternatively, you can view and change allocated time on the [instances page.](https://quantum.cloud.ibm.com/instances)
 
 ## What happens when the limit is reached
 
