Integrate admin docs (#2893)
If at all possible, merge after
https://github.com/Qiskit/documentation/pull/2864 is merged

- [x] Bring over pages that will stay as standalone pages
- [x] Add to toc and to `qiskit_bot`
- [x] integrate info from Analytics and Workloads (and possibly the
index page) into existing pages
- [x] Check all links (in paths, change `/administration/ `to
`/guides/`; look for `./` etc.)
- [ ] figure out the best order for the new files in the toc
- [x] Add new pill to new pages

---------

Co-authored-by: Rebecca Dimock <beckyd@us.ibm.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>
Co-authored-by: Arnau Casau I Playa <arnau.casau@ibm.com>

--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -143,8 +143,12 @@ Additionally, you can determine cost per instance or per job at any time.
 
 ### View usage
 
+<LegacyContent>
 To view the instance's usage, follow the instructions in the [analytics](/administration/analytics) guide.
-
+</LegacyContent>
+<CloudContent>
+View the instance's usage on the [Analytics](https://quantum.cloud.ibm.com/analytics) page.
+</CloudContent>
 {/* ### View instance cost
 
 To determine how much has been billed to an instance during the current billing cycle, from the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, click the instance to open its details page.
@@ -179,6 +183,11 @@ On the Standard Plan, you can set up spending notifications to get notified when
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
+<LegacyContent>
     - Review the [Qiskit Runtime plans](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-plans) available on IBM Cloud.
+    </LegacyContent>
+    <CloudContent>
+    - Review the [plans](plans-overview) available to IBM Quantum users.
+    </CloudContent>
     - Review suggestions to [minimize job quantum time.](minimize-time)
 </Admonition>
