--- a/docs/guides/quickstart-org.mdx
+++ b/docs/guides/quickstart-org.mdx
@@ -30,7 +30,7 @@ The are several main personas that are mentioned in this guide:
 This guide uses the following terms:
 
 * _Resource_: A generic IBM Cloud term that refers to an object that can be managed through the Cloud user interface, CLI, or API. For this guide, a _resource_ is an IBM Quantum service instance.
-* _Service instance_: A service instance is used to access Cloud functions. Specifically, quantum computing on real devices or simulators. It is defined through the catalog. You can define several service instances based on the same or different plans, which offer access to different quantum computing backends. See [Available IBM Cloud plans](/guides/cloud-setup#cloud-plans) for details.
+* _Service instance_: A service instance is used to access Cloud functions. Specifically, quantum computing on real devices or simulators. It is defined through the catalog. You can define several service instances based on the same or different plans, which offer access to different quantum computing backends. See [Available IBM Cloud plans](/guides/plans-overview) for details.
 * _Project_: A grouping unit that enables users to work on the same resources. This guide uses two projects: `ml` and `finance`. See [Hierarchical project structures](/guides/considerations-set-up-runtime#nest-org) for more information.
 
    <Admonition type="note">
