More spaghetti I say!

--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -14,7 +14,7 @@ When you create an instance in IBM Quantum Platform, an access group is automati
 An _access group_ contains _policies_, which define the actions that access group members can take on specific resources.  In this guide, the resource is always  an IBM Quantum _service instance_.
 
 <Admonition type="note">
-After an access group is created, you can invite users to the group by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/admin/access-groups) page in the left-hand menu.
+After an access group is created, you can invite users to the group by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/access-groups) page in the left-hand menu.
 </Admonition>
 
 <span id="json"></span>
