Apply suggestions from code review
Co-authored-by: Fran Cabrera <francabrera@users.noreply.github.com>

--- a/docs/guides/allocation-limits.mdx
+++ b/docs/guides/allocation-limits.mdx
@@ -5,9 +5,9 @@ platform: cloud
 ---
 # Set instance allocation limits
 
-Premium accounts are alloted a certain amount of time.  Because each account can have many instances, setting allocation limits helps you control which instances are allowed to consume that time.
+An account may have allotted time on the premium plan. Because each account can have many premium plan instances, setting allocation limits helps you control which instances are allowed to consume that time.
 
-The time that you allocate is used by the fair-share algorithm and determines the priority in the queue, based on usage of all QPUs over a rolling time window of 28 days.
+The time that you allocate to premium plan instances is used by the fair-share algorithm and determines the priority in the queue, based on usage of all QPUs over a rolling time window of 28 days.
 
 Optionally you can set this time allocation as a limit for the instance.
 
