--- a/docs/guides/allocation-limits.mdx
+++ b/docs/guides/allocation-limits.mdx
@@ -9,15 +9,11 @@ An account may have allotted time on the premium plan. Because each account can 
 
 The time that you allocate to premium plan instances is used by the fair-share algorithm and determines the priority in the queue, based on usage of all QPUs over a rolling time window of 28 days.
 
-Optionally you can set this time allocation as a limit for the instance.
-
-Setting allocations and limits is optional.  If none are set for your instances, the [fair-share scheduler](/fair-share-queue) prioritizes workloads from instances with lower usage, and your account is still limited to its overall time allotment.
-
 You can set the allocation when creating the instance.  Alternatively, you can view and change allocated time on the [instances page.](https://quantum.cloud.ibm.com/instances)
 
 ## What happens when the limit is reached
 
-The following happens when an instance reaches its limit:
+You can optionally set this time allocation as a limit for the instance. The following happens when an instance reaches its limit:
 
 - Active workloads continure running.
 - Pending jobs remain queued.
@@ -29,4 +25,5 @@ The following happens when an instance reaches its limit:
 <Admonition type="tip" title="Recommendations">
     - Learn about [instances.](/instances)
     - Review suggestions to [minimize job quantum time.](minimize-time)
+    - Understand the [fair-share scheduler.](/fair-share-queue)
 </Admonition>
