--- a/docs/guides/allocation-limits.mdx
+++ b/docs/guides/allocation-limits.mdx
@@ -23,7 +23,7 @@ You can optionally set this time allocation as a limit for the instance. The fol
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Learn about [instances.](/instances)
+    - Learn about [instances.](/guides/instances)
     - Review suggestions to [minimize job quantum time.](minimize-time)
-    - Understand the [fair-share scheduler.](/fair-share-queue)
+    - Understand the [fair-share scheduler.](/guides/fair-share-scheduler)
 </Admonition>
